{{$NEXT}}

1.302143  2018-12-11 19:10:37-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix failure to check error code on shmwrite (#815)

1.302142  2018-12-11 11:55:22-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix #814 Windows fork+test failure
    - Fix #819 Documentation updates
    - Fix #810 Verbose TAP newline regression
    - Fix #817 local $TODO bug
    - Fix #812 Another local $TODO bug
    - Fix #815 shm read warning
    - Merge doc fix PR's from magnolia-k (thanks!)

1.302141  2018-11-30 14:27:19-08:00 America/Los_Angeles

    - Fix bug where IPC init failed in preload+fork environments

1.302140  2018-08-13 08:00:25-07:00 America/Los_Angeles

    - No Changes since last release

1.302139  2018-07-17 12:38:37-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Mask warning from the recent IPC fix generated when threaded Test tools are loaded at run-time

1.302138  2018-07-11 09:29:51-07:00 America/Los_Angeles

    - No changes since trial

1.302137  2018-05-25 08:45:13-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make it safe to fork before events in IPC

1.302136  2018-04-19 05:40:11-07:00 America/Los_Angeles

    - Add test2_add_callback_testing_done to Test2::API

1.302135  2018-03-29 22:53:00-07:00 America/Los_Angeles

    - No changes since last trial

1.302134  2018-03-19 21:20:08-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make sure all hubs, events, and contexts get a unique (per run) id.
    - Use a common generator for unique(enough) id's (not UUIDs)

1.302133  2018-03-11 12:48:37-07:00 America/Los_Angeles

    - No changes since last trial

1.302132  2018-03-09 15:43:51-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Add method to validate facet data
    - Add Test2::Event::V2 event class, and context helpers
    - Improve how events handle facets
    - Break out meta_facet_data
    - Document and fix Facets2Legacy
    - Fix nested and in_subtest to look at hub facets
    - Fix event->related and trace with uuid
