@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add tests for shmwrite fix (#815)
+
 1.302143  2018-12-11 19:10:37-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix failure to check error code on shmwrite (#815)
